# amxx

./: .gitignore  CMakeLists.txt  README.md
include/amxx/: amx.h  api.h  config.h.in  game_configs.h  os_defs.h
src/: api.cpp
